Fix: utilize z-index to display video behind screen

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -16,7 +16,6 @@ body{
 
 .page1{
     background: rgba(0,0,0, 0.5) url('../images/netflix.jpg');
-    
     background-blend-mode: darken;
     color: antiquewhite;
     height: 32rem;
@@ -26,27 +25,28 @@ body{
 .logoAndSignUpButton{
     display: flex;
     flex-direction: row;
-    gap: 8rem;
+    gap: 9rem;
     margin-bottom: 2rem;
 }
 
 .logo img{
     width: 7rem;
     height: 3.2rem;
-    margin-left:1.52rem;
+    margin-left:1.3rem;
     padding-top: 1rem;
 }
 
 .logoAndSignUpButton button{
     background-color: rgb(229, 9, 20);
-    width: 20rem;
+    width: 10rem;
     height: 2.2rem;
     margin-right: 1.5rem;
     margin-top: 1.5rem;
     border-radius: 0.3rem;
     border: none;
     color: white;
-    font-size: 1rem;
+    font-size: 0.9rem;
+    font-weight: 700;
 }
 
 .p1content{
@@ -66,6 +66,7 @@ body{
     line-height:1.8rem;
     font-size: 1.2rem; 
     margin-bottom: 1rem;
+    font-weight: 400;
 }
 
 .p1content .paragraph2{
@@ -77,15 +78,15 @@ body{
 }
 
 input{
-    background-color: rgba(0,0,0, 0.5);
+    background-color: rgba(25, 20, 20, 0.6);
     width: 18rem;
     height: 3rem;
     font-size: 1rem;
-    color:  rgba(255, 255, 255, 0.7); 
+    color:  rgba(108, 106, 106, 0.9); 
     padding-left: 1rem;
     border-radius: 0.4rem;
     margin-bottom: 1rem;
-    border: 1px solid rgba(255, 255, 255, 0.7);
+    border: 1px solid rgba(255, 255, 255, 0.4);
 }
 
 .p1content button {
@@ -123,23 +124,85 @@ input{
     padding-top: 1rem;
     text-align: center;
     line-height:1.6rem;
-    font-size: 1.3rem; 
-    font-weight: 500;
+    font-size: 1.25rem; 
+    font-weight: 400;
+    width: 100%;
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
+    margin: 1rem 0 0;
 }
 
 .page2 .image1{
-    background-image: url('../images/netflix-tv.png');
     background-size: cover;
     height: 18rem;
+    width: 100%;
+    margin: 0 auto;
+}
+
+.image1 img{
+    height: auto;
+    width: 100%;
+    position: absolute;
+    z-index: 1;
+
+}
+
+    .vid {
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+
+    }
+
+.image1 video{
+    height: 100%;
     width: 100%;
 }
 
 
 .page3 .image2{
-    background-image: url('../images/netflix-mobile-image.jpg');
-    background-size: cover;
+    /* background-image: url('../images/netflix-mobile-image.jpg'); */
+    /* background-size: cover; */
+    height: 100%;
+    width: 100%;
+    /* z-index: 12;
+    position: relative; */
+}
+
+.image2 img{
     height: 18rem;
     width: 100%;
+}
+
+.p2images{
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
+
+.OLimage{
+    height: 3.5rem;
+    width: 16rem;
+    border: 2px solid rgba(255, 255, 255, 0.4);
+    position: absolute;
+    z-index: 12;
+    border-radius: 0.75rem;
+    margin-top: 12rem;
+    background: black;
+
+}
+
+.boxShot img{
+position: relative;
+z-index: -18;
+height: 2.8rem;
+width: 2.8rem;
+margin-left: 0.5rem;
+padding-top: 0.4rem;
+justify-self: center;
+align-self: center;
 }
 
 .page4{
@@ -156,10 +219,11 @@ input{
     width: 100%;
     background: url('../images/netflix-kids.png');
     background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .page6{
-    height: 80rem;
+    height: 60rem;
     background-color: black;
     color: antiquewhite;
     justify-content: center;
@@ -170,7 +234,6 @@ input{
 
 .page6 h1{
     text-align: center;
-    /* padding-top: 2rem; */
 }
 
 .page6 .accordion{
@@ -178,11 +241,19 @@ input{
    gap: 2rem;
    height: 3rem;
    border-radius: none;
-   width: 21rem;
+   width: 19.8rem;
    background-color: rgba(98, 94, 94, 0.4) ;
    margin-top: 1rem;
-   font-size: 1.5rem;
-   padding: 2rem 0rem 0rem 2rem;
+   font-size: 1.125rem;
+   padding: 1rem 1rem 0rem 1rem;
+   font-weight: 400;
+   color: rgb(255,255,255);
+}
+
+.page6 .accordionContent{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 .page6content{
@@ -193,5 +264,17 @@ input{
     line-height: 1.8rem;
     text-align: center;
     width: 18rem;
-    font-size: 1.4rem;
+    font-size: 1.25rem;
+    font-weight: 400;
+}
+
+.page6 button{
+    background-color: rgb(229, 9, 20);
+    width: 10rem;
+    height: 2.9rem;
+    margin-right: 1.5rem;
+    border-radius: 0.3rem;
+    border: none;
+    color: white;
+    font-size: 1rem;
 }
